src/styles/component/_thorkey.scss
.title1-thorkey{
    color: #ae7212;
    font-size: 45px;
    font-weight: 600;
}
.btn-thorkey{
  color: var(--btn-thorkey-color);
  background-color: var(--btn-thorkey-bg);
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 7px;
  &:hover{
    color: #ffffff;
    background-color: #5f4516;
  }
}
.bg-pasti-thorkey{
    background-color: #ac7c2e ;
    border-radius: 20px;
      p{
        color: #fff;
        @extend .project-tech-stack;
        margin: 1em 0;
      }
}
.card{
  border-radius: 25% 10%;
}
.p-thorkey{
    color:rgb(70, 70, 70);
    font-size: 16px;
    font-weight: 600;
  }
.border-thorkey{
    border: 1px solid #996f3968;
    border-radius: 30px;
  }
.thorkey-li {
    @extend .project-funtionalities;
      .li-thorkey-icons{   
        color: #ac7c2e;
        font-size: 2rem;
      }
  }


/* Breakpoint  formato pc, arriba de los 991px*/
@media screen and (max-width: 992px) {
      .img-thorkey{
        width: 75% !important;
      }
      .bg-pasti-thorkey{
        p{
          margin: 2em 1em 1em 1em;
        }
      }
}
  
/* Breakpoint formato tablet*/
@media screen and (max-width: 768px) {
    .title1-thorkey{
        font-size: 30px;
        margin-bottom: 1em;
      }
      .btn-thorkey{
        padding: 10px 20px;
        font-size: 16px;
      }
      .p-thorkey{
        color:rgb(70, 70, 70);
        font-size: 16px;
        font-weight: 600;
      }
     
      .border-thorkey{
        border: 1px solid #92550585
      }
      .img-thorkey{
        width: 100% !important;
      }
      .thorkey-li {
          .li-thorkey-icons{   
            color: #ac7c2e;
            font-size: 1.8rem;
          }
      }
      .bg-pasti-thorkey{
        p{
          margin: 2em 0 0 0;
        }
      }
         
}

/* Breakpoint formato mobile*/
@media screen and (max-width: 576px) {
  .title1-thorkey{
      font-size: 24px;
      margin-bottom: 1em;
    }
    .btn-thorkey{
      padding: 10px 20px;
      font-size: 14px;
    }
    .p-thorkey{
      color:rgb(70, 70, 70);
      font-size: 14px;
      font-weight: 600;
    }  
    .thorkey-li {
      .li-thorkey-icons{   
        color: #ac7c2e;
        font-size: 1.5rem;
      }
  }
  .bg-pasti-thorkey{
      p{
        margin: 2em 0 0 0;
      }
  }
}

